<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddPhotoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/app_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/app_title"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title_add_new_photo"
            android:textColor="@color/mint"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="3dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_rectangle_rd5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/bg_transparant_et"
            android:hint="@string/title_name"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title_descriptiom"
            android:textColor="@color/mint"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_bg"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="top|start"
            android:hint="@string/type_here"
            android:padding="12dp"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/preview_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:shapeAppearanceOverlay="@style/roundedImageStyle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView">

            <Button
                android:id="@+id/btn_take_picture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:background="@drawable/bg_rectangle_rd15_white"
                android:text="@string/take_picture"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="10dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_open_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rectangle_rd15_white"
                android:layout_toEndOf="@+id/btn_take_picture"
                android:text="@string/open_gallery"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rectangle_rd15"
            android:text="Find Recipe"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/container_btn"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>